--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head　prefix=”og: http://ogp.me/ns#”>
   <meta charset="UTF-8">
+  <meta property="og:url" content="https://tender-goldstine-554142.netlify.app/"/>
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="SmartPost"/>
+  <meta property="og:description" content="次世代のポスト"/>
+  <meta property="og:image" content="https://tender-goldstine-554142.netlify.app/img/post.png"/>
+  <meta name="twitter:card" content="summary"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
+  
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
   
