fix all details

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="header">
     <div class="logomenu">
-      <img src="./img/cat-logo.jpg" alt="logo" id="logo">
+      <img src="./img/logo.PNG" alt="logo" id="logo">
       <ul class="menubar">
         <li><a href="#" id="to-top">TOP</a></li>
         <li><a href="#post-it" id="to-post">「あ、届いた」の巻</a></li>
@@ -166,7 +166,7 @@
         </div>
 
         <div class="phone">
-          <img src="./img/cat-about5.jpg" alt="">
+          <img src="./img/line.png" alt="line">
         </div>
       </div>
     </div>
@@ -181,22 +181,20 @@
 
       <div class="re-up">
         <div class="person1">
-          <div class="circle"></div>
-          <div class="triangle"></div>
+          <img src="./img/man.png" alt="man" width="300px">
         </div>
-        <div class="comment">
-          <p id="re-up-com1">コメントが入ります。コメントが入ります。コメントが入ります。コメントが入ります。</p>
+        <div class="comment1">
+          <img src="./img/comment-left.png" alt="comment" width="400px" height="200px">
         </div>
 
       </div>
       <div class="re-bot">
-        <div class="comment">
-          <p id="re-up-com2">コメントが入ります。コメントが入ります。コメントが入ります。コメントが入ります。</p>
+        <div class="comment2">
+          <img src="./img/comment-right.png" alt="comment" width="400px" height="200px">
         </div>
 
         <div class="person2">
-          <div class="circle"></div>
-          <div class="triangle"></div>
+          <img src="./img/woman.png" alt="woman" width="280px">
         </div>
 
 
