--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head　prefix=”og: http://ogp.me/ns#”>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta charset="UTF-8">
-  <meta property="og:url" content="https://tender-goldstine-554142.netlify.app/" />
+  <meta property="og:url" content="https://smart-post.netlify.app/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="SmartPost" />
   <meta property="og:description" content="次世代のポスト" />
-  <meta property="og:image" content="https://tender-goldstine-554142.netlify.app/img/post.png" />
+  <meta property="og:image" content="https://smart-post.netlify.app/img/post.png" />
   <meta name="twitter:card" content="summary" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
-
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-    integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
 
   <title>スマートポスト</title>
 </head>
@@ -22,7 +18,7 @@
 <body>
   <div class="header">
     <div class="logomenu">
-      <img src="./img/logo.PNG" alt="logo" id="logo">
+      <img src="./img/arrow_logo_B.png" alt="logo" id="logo">
       <ul class="menubar">
         <li><a href="#" id="to-top">TOP</a></li>
         <li><a href="#post-it" id="to-post">「あ、届いた」の巻</a></li>
@@ -34,11 +30,12 @@
       </ul>
     </div>
     <div class="bg">
-      <img src="./img/bg.jpg" alt="top" id="top">
-      <div class="headline">
-        <p>「あ、届いた」がわかる</p>
-        <h2>スマートポスト</h2>
-      </div>
+      <img src="./img/bg.png" alt="top" id="top">
+        <div class="proper">
+          <p>最低価格</p>
+          <h2>¥1,458~</h2>
+          <a href="./find.html">最適モデルのお探しはこちらから</a>
+        </div>
     </div>
   </div>
 
@@ -71,21 +68,7 @@
       </div>
       <p id="config">スマートポストではポストに入った郵便物をあなたに教えてくれます。</p>
       <div class="feature-container">
-        <div class="f-ele ele1">
-          <img src="./img/fcat.jpeg" alt="fcat" width="200px">
-          <h3>届いたらLINEに通知</h3>
-          <p>投函時に赤外線センサーまたは磁力センサーで検知し、LINEに通知します。</p>
-        </div>
-        <div class="f-ele ele2">
-          <img src="./img/fcat2.jpg" alt="fcat2" width="200px">
-          <h3>ポスト内を撮影する</h3>
-          <p>投函時にポスト内の郵便物を撮影しLINEに通知するほか、設定した頻度で定期的に撮影することができます。</p>
-        </div>
-        <div class="f-ele ele3">
-          <img src="./img/fcat3.jpg" alt="fcat3" width="200px">
-          <h3>長期稼働が可能</h3>
-          <p>投函以外にイベントが発生しない場合、Wi-Fiやカメラをオフにしたり、寿命の長いバッテリーを採用したりとしたりと省エネを重視することによって長期稼働が見込めます。</p>
-        </div>
+        <img src="./img/feature3.png" alt="feature" width="80%">
       </div>
       <video src="./video/MVI_1542.MP4" width="800px" controls></video>
     </div>
@@ -209,7 +192,7 @@
       <h1>ARROWチーム</h1>
       <div class="mem-up">
         <div class="to-margin rinkei">
-          <img src="./img/members/rinkei.png">
+          <img src="./img/members/rinkeis.png">
           <ul class="icon">
             <li><a href="https://github.com/6terabyte" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/6terabyte" target="_brank"><i class="fab fa-twitter"></i></a></li>
