--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <title>スマートポスト</title>
 </head>
 
@@ -32,9 +33,7 @@
     <div class="bg">
       <img src="./img/bg.png" alt="top" id="top">
         <div class="proper">
-          <p>最低価格</p>
-          <h2>¥1,458~</h2>
-          <a href="./find.html">最適モデルのお探しはこちらから</a>
+          <a href="./find.html"><img src="./img/cheapest.png" alt="cheapest" width="300px"></a>
         </div>
     </div>
   </div>
@@ -70,7 +69,7 @@
       <div class="feature-container">
         <img src="./img/feature3.png" alt="feature" width="80%">
       </div>
-      <video src="./video/MVI_1542.MP4" width="800px" controls></video>
+      <video src="./video/introduction.mp4" width="800px" controls></video>
     </div>
   </div>
 
@@ -203,7 +202,7 @@
           <p>*当チームは2020年、Code for Japan 主催による「Civictech Challenge Cup [U-22]」において結成されたハッカソンチームです。</p>
         </div>
         <div class="to-margin waricoma">
-          <img src="./img/members/comacoma.png">
+          <img src="./img/members/comacoo.png">
           <ul class="icon">
             <li><a href="https://github.com/waricoma" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/waritocomatta" target="_brank"><i class="fab fa-twitter"></i></a></li>
@@ -212,21 +211,21 @@
       </div>
       <div class="mem-bottom">
         <div class="to-margin anjyu">
-          <img src="./img/members/anjyu.png">
+          <img src="./img/members/anjuu.jpg">
           <ul class="icon">
             <li><a href=""><i class="fab fa-github" target="_brank"></i></a></li>
             <li><a href="https://twitter.com/anjyu_style" target="_brank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="to-margin ryuji">
-          <img src="./img/members/ryuji.png">
+          <img src="./img/members/ryuji.jpg">
           <ul class="icon">
             <li><a href="https://github.com/ryuji-cre8ive" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/ryuji_vlog" target="_brank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="to-margin yuri">
-          <img src="./img/members/yuri.png">
+          <img src="./img/members/yuriyuri.png">
           <ul class="icon">
             <li><a href="https://github.com/gotoyuriko" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/yuriko_goto" target="_brank"><i class="fab fa-twitter"></i></a></li>
