--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="feature-container">
         <img src="./img/feature3.png" alt="feature" width="80%">
       </div>
-      <video src="./video/introduction.mp4" width="800px" controls></video>
+      <video src="./video/introduction.mp4" width="800px" controls poster="./img/sam.png"></video>
     </div>
   </div>
 
@@ -166,12 +166,14 @@
           <img src="./img/man.png" alt="man" width="300px">
         </div>
         <div class="comment1">
+          <p>最高です</p>
           <img src="./img/comment-left.png" alt="comment" width="400px" height="200px">
         </div>
 
       </div>
       <div class="re-bot">
         <div class="comment2">
+          <p>最高だわ</p>
           <img src="./img/comment-right.png" alt="comment" width="400px" height="200px">
         </div>
 
