changed more and find

--- a/index.html
+++ b/index.html
@@ -112,12 +112,7 @@
 
       </div>
       <div class="find">
-        <a href="./find.html" class="find-model">ぴったりなモデルを探す</a>
-        <div class="arrows">
-          <div id="up"></div>
-          <div id="right"></div>
-          <div id="bottom"></div>
-        </div>
+        <a href="./find.html" class="find-model"><img src="./img/find.png" alt="find" width="250px"></a>
       </div>
       <div class="attention">
         <p>＊お見積もり価格は原価表示です。当モデルは収益を目的としておりません。
@@ -138,12 +133,7 @@
             新型コロナウイルスの感染拡大の影響を受け、神戸市の市民生活において「ポストに入っている郵便物が遠くにある。取りに行くのが大変。」という課題を受け、郵便物がきたら教えてくれるスマートポストを開発することになりました。そして...
           </p>
           <div class="more">
-            <a href="./more.html">もっと見る</a>
-            <div class="arrows">
-              <div id="up2"></div>
-              <div id="right2"></div>
-              <div id="bottom2"></div>
-            </div>
+            <a href="./more.html"><img src="./img/more.png" alt="more" width="250px"></a>
           </div>
         </div>
 
