--- a/more.html
+++ b/more.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="find-top">
-    <img src="./img/cat-logo.jpg" alt="logo" width="100px" height="100px">
+    <img src="./img/arrow_logo_B.png" alt="logo" width="160px" height="100px">
     <a href="./index.html" id="toHome">Homeへ</a>
   </div>
 
