國部くんのを更新

--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head　prefix=”og: http://ogp.me/ns#”>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta charset="UTF-8">
-  <meta property="og:url" content="https://tender-goldstine-554142.netlify.app/" />
+  <meta property="og:url" content="https://smart-post.netlify.app/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="SmartPost" />
   <meta property="og:description" content="次世代のポスト" />
-  <meta property="og:image" content="https://tender-goldstine-554142.netlify.app/img/post.png" />
+  <meta property="og:image" content="https://smart-post.netlify.app/img/post.png" />
   <meta name="twitter:card" content="summary" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
 
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-    integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <title>スマートポスト</title>
 </head>
 
 <body>
   <div class="header">
     <div class="logomenu">
-      <img src="./img/cat-logo.jpg" alt="logo" id="logo">
+      <img src="./img/arrow_logo_B.png" alt="logo" id="logo">
       <ul class="menubar">
         <li><a href="#" id="to-top">TOP</a></li>
         <li><a href="#post-it" id="to-post">「あ、届いた」の巻</a></li>
@@ -34,11 +31,10 @@
       </ul>
     </div>
     <div class="bg">
-      <img src="./img/bg.jpg" alt="top" id="top">
-      <div class="headline">
-        <p>「あ、届いた」がわかる</p>
-        <h2>スマートポスト</h2>
-      </div>
+      <img src="./img/bg.png" alt="top" id="top">
+        <div class="proper">
+          <a href="./find.html"><img src="./img/cheapest.png" alt="cheapest" width="300px"></a>
+        </div>
     </div>
   </div>
 
@@ -71,23 +67,9 @@
       </div>
       <p id="config">スマートポストではポストに入った郵便物をあなたに教えてくれます。</p>
       <div class="feature-container">
-        <div class="f-ele ele1">
-          <img src="./img/fcat.jpeg" alt="fcat" width="200px">
-          <h3>届いたらLINEに通知</h3>
-          <p>投函時に赤外線センサーまたは磁力センサーで検知し、LINEに通知します。</p>
-        </div>
-        <div class="f-ele ele2">
-          <img src="./img/fcat2.jpg" alt="fcat2" width="200px">
-          <h3>ポスト内を撮影する</h3>
-          <p>投函時にポスト内の郵便物を撮影しLINEに通知するほか、設定した頻度で定期的に撮影することができます。</p>
-        </div>
-        <div class="f-ele ele3">
-          <img src="./img/fcat3.jpg" alt="fcat3" width="200px">
-          <h3>長期稼働が可能</h3>
-          <p>投函以外にイベントが発生しない場合、Wi-Fiやカメラをオフにしたり、寿命の長いバッテリーを採用したりとしたりと省エネを重視することによって長期稼働が見込めます。</p>
-        </div>
+        <img src="./img/feature3.png" alt="feature" width="80%">
       </div>
-      <video src="./video/MVI_1542.MP4" width="800px" controls></video>
+      <video src="./video/introduction.mp4" width="800px" controls poster="./img/sam.png"></video>
     </div>
   </div>
 
@@ -130,12 +112,7 @@
 
       </div>
       <div class="find">
-        <a href="./find.html" class="find-model">ぴったりなモデルを探す</a>
-        <div class="arrows">
-          <div id="up"></div>
-          <div id="right"></div>
-          <div id="bottom"></div>
-        </div>
+        <a href="./find.html" class="find-model"><img src="./img/find.png" alt="find" width="250px"></a>
       </div>
       <div class="attention">
         <p>＊お見積もり価格は原価表示です。当モデルは収益を目的としておりません。
@@ -156,17 +133,12 @@
             新型コロナウイルスの感染拡大の影響を受け、神戸市の市民生活において「ポストに入っている郵便物が遠くにある。取りに行くのが大変。」という課題を受け、郵便物がきたら教えてくれるスマートポストを開発することになりました。そして...
           </p>
           <div class="more">
-            <a href="./more.html">もっと見る</a>
-            <div class="arrows">
-              <div id="up2"></div>
-              <div id="right2"></div>
-              <div id="bottom2"></div>
-            </div>
+            <a href="./more.html"><img src="./img/more.png" alt="more" width="250px"></a>
           </div>
         </div>
 
         <div class="phone">
-          <img src="./img/cat-about5.jpg" alt="">
+          <img src="./img/line.png" alt="line">
         </div>
       </div>
     </div>
@@ -181,22 +153,22 @@
 
       <div class="re-up">
         <div class="person1">
-          <div class="circle"></div>
-          <div class="triangle"></div>
+          <img src="./img/man.png" alt="man" width="300px">
         </div>
-        <div class="comment">
-          <p id="re-up-com1">コメントが入ります。コメントが入ります。コメントが入ります。コメントが入ります。</p>
+        <div class="comment1">
+          <p>最高です</p>
+          <img src="./img/comment-left.png" alt="comment" width="400px" height="200px">
         </div>
 
       </div>
       <div class="re-bot">
-        <div class="comment">
-          <p id="re-up-com2">コメントが入ります。コメントが入ります。コメントが入ります。コメントが入ります。</p>
+        <div class="comment2">
+          <p>最高だわ</p>
+          <img src="./img/comment-right.png" alt="comment" width="400px" height="200px">
         </div>
 
         <div class="person2">
-          <div class="circle"></div>
-          <div class="triangle"></div>
+          <img src="./img/woman.png" alt="woman" width="280px">
         </div>
 
 
@@ -211,7 +183,7 @@
       <h1>ARROWチーム</h1>
       <div class="mem-up">
         <div class="to-margin rinkei">
-          <img src="./img/members/rinkei.png">
+          <img src="./img/members/rinkeis.png">
           <ul class="icon">
             <li><a href="https://github.com/6terabyte" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/6terabyte" target="_brank"><i class="fab fa-twitter"></i></a></li>
@@ -222,7 +194,7 @@
           <p>*当チームは2020年、Code for Japan 主催による「Civictech Challenge Cup [U-22]」において結成されたハッカソンチームです。</p>
         </div>
         <div class="to-margin waricoma">
-          <img src="./img/members/comacoma.png">
+          <img src="./img/members/comacoo.png">
           <ul class="icon">
             <li><a href="https://github.com/waricoma" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/waritocomatta" target="_brank"><i class="fab fa-twitter"></i></a></li>
@@ -231,21 +203,21 @@
       </div>
       <div class="mem-bottom">
         <div class="to-margin anjyu">
-          <img src="./img/members/anjyu.png">
+          <img src="./img/members/anjuu.jpg">
           <ul class="icon">
             <li><a href=""><i class="fab fa-github" target="_brank"></i></a></li>
             <li><a href="https://twitter.com/anjyu_style" target="_brank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="to-margin ryuji">
-          <img src="./img/members/ryuji.png">
+          <img src="./img/members/ryuji.jpg">
           <ul class="icon">
             <li><a href="https://github.com/ryuji-cre8ive" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/ryuji_vlog" target="_brank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="to-margin yuri">
-          <img src="./img/members/yuri.png">
+          <img src="./img/members/yuriyuri.png">
           <ul class="icon">
             <li><a href="https://github.com/gotoyuriko" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/yuriko_goto" target="_brank"><i class="fab fa-twitter"></i></a></li>
