--- a/more.html
+++ b/more.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Details</title>
+  <title>制作ストーリー</title>
 </head>
 <body>
   <div class="find-top">
@@ -19,51 +19,83 @@
       <div class="story-1">
         <div id="text1">
           <h3>01 きっかけはコロナ禍における生活課題</h3>
-          <p>新型コロナウイルスの感染拡大の影響を受け、神戸市の市民生活において「ポストに入って いる郵便物が遠くにある。取りに行くのが大変。」と言う課題を受け、郵便物が来たら教え てくれるスマートポストを開発することになりました。 <br>神戸市の支援のもと、以下の仕様をもとに作っています。<br> <br>① ポストに⼊る郵便物がきたら⾚外線か磁⼒で検知しLINEに送る。<br> ② 電池交換のために結局何回も訪問するのは良くないので⼤きなバッテリと省エネ性で⻑持ちさせる。<br> ③ポスト内部を撮影してLINEに送る機能もつける。<br><br>写真1：神戸市補助金交付</p>
+          <p>新型コロナウイルスの感染拡大の影響を受け、神戸市の市民生活において「ポストに入って いる郵便物が遠くにある。取りに行くのが大変。」と言う課題を受け、郵便物が来たら教え
+            てくれるスマートポストを開発することになりました。</p> 
+            <p>神戸市の支援のもと、以下の仕様をもとに作っています。<br> ① ポストに⼊る郵便物がきたら⾚外線か磁⼒で検知しLINEに送る。<br> ②
+            電池交換のために結局何回も訪問するのは良くないので⼤きなバッテリと省エネ性で⻑持ちさせる。<br> ③ポスト内部を撮影してLINEに送る機能もつける。<br><br>写真1：神戸市補助金交付</p>
         </div>
-        <img src="./img/story/screenshot.png" alt="contract" width="50%" height="340px">
+        <img src="./img/story/screenshot.png" alt="contract" width="50%" height="360px"><p class="num" id="num1">1</p>
       </div>
       <div class="story-2">
         <div class="story-con">
-          <img src="./img/story/dsc_1062.jpg" alt="story-pic" width="580px" height="320px">
+          <img src="./img/story/dsc_1062.jpg" alt="story-pic" width="580px" height="320px"><p class="num" id="num2">2</p>
           <div id="text2">
-            <p>コミュニケーション <br>・Slack(https://slack.com/intl/ja-jp/) <br>・Figma(https://www.figma.com/) <br>3Dプリンタ・回路図周り <br>・3dcad DesignSpark Mechanical(https://www.rs-online.com/designspark/mechanical-software-jp)：3次元CAD <br>・marmelo(https://motchy99.blog.fc2.com/blog-entry-73.html)：回路図 デザイン周り <br>・Adobe XD(https://www.adobe.com/jp/products/xd.html) <br>・Adobe Illustrator(https://www.adobe.com/jp/products/illustrator.html?promoid=PGRQQLFS&mv=other) <br>・Adobe Photoshop：(https://www.adobe.com/jp/products/photoshop.html)</p>
+            <p><span>コミュニケーション</span> <br>・<a href="https://slack.com/intl/ja-jp/">Slack</a> <br>・<a
+                href="https://www.figma.com/">Figma</a></p>
+            <p><span>3Dプリンタ・回路図周り </span><br>・<a
+                href="https://www.rs-online.com/designspark/mechanical-software-jp">3dcad DesignSpark
+                Mechanical</a>：3次元CAD <br>・<a href="https://motchy99.blog.fc2.com/blog-entry-73.html">marmelo</a>: 回路図
+              <br> </p>
+            <p><span>デザイン周り</span> <br>・<a href="https://www.adobe.com/jp/products/xd.html">Adobe XD</a><br>・<a
+                href="https://www.adobe.com/jp/products/illustrator.html?promoid=PGRQQLFS&mv=other">Adobe
+                Illustrator</a> <br>・<a href="https://www.adobe.com/jp/products/photoshop.html">Adobe Photoshop</a></p>
           </div>
         </div>
         <div id="text3">
           <h3>02 準備</h3>
-          <p>システム周り <br>・プライベードクラウドを自作 <br>・Github(https://github.com/)：共同開発など <br>・Circle CI (https://circleci.com/)：CI /CDの自動化ツール <br>・Codecov(https://codecov.io/)： 　テストのクオリティがどれくらいカバーしてるかチェック <br>・Renovate Bot (https://renovate.whitesourcesoftware.com/)： ライブラリの自動更新・エラーを検知し自動修正または 開発者に通知</p>
+          <p><span>システム周り</span> <br>・プライベードクラウドを自作 <br>・<a href="https://github.com/">Github</a>：共同開発など <br>・<a
+              href="https://circleci.com/">Circle CI</a>：CI/CDの自動化ツール <br>・<a
+              href="https://codecov.io/">Codecov</a>：テストのクオリティがどれくらいカバーしてるかチェック <br>・<a
+              href="https://renovate.whitesourcesoftware.com/">Renovate Bot</a>：ライブラリの自動更新・エラーを検知し自動修正または 開発者に通知</p>
           <p>写真2：左からルータ、モデム、無停電電源装置、サーバ本体</p>
-          <p>その他ツール/サービス、言語やフレームワーク、標準規格など を以下に載せておきます。 <br>・Arduino (https://www.arduino.cc/) <br>・Express(https://expressjs.com/) <br>・TypeScript(https://www.typescriptlang.org/) <br>・Vue.js(https://vuejs.org/) <br>・LINE Message API (https://developers.line.biz/ja/docs/ messaging-api/) <br>・Husky (https://github.com/typicode/husky) <br>・cz-emoji(https://github.com/ngryman/cz-emoji) <br>・Swagger(https://swagger.io/specification/)<br> ・MariaDB(https://mariadb.org/) <br>・TypeORM(https://typeorm.io/) <br>・PWA(https://en.wikipedia.org/wiki/ Progressive_web_application) <br>・Let’s Encrypt(https://letsencrypt.org/) <br>・Dredd(https://dredd.org/en/latest/) <br>・cypress(https://www.cypress.io/) <br>・Jest(https://jestjs.io/) <br>・Zabbix(https://www.zabbix.com/) <br>・nginx(https://nginx.org/) <br>・yarn(https://classic.yarnpkg.com/lang/en/) <br>・MySQL(https://www.mysql.com/products/workbench/) <br>・Dbeaver(https://dbeaver.io/) <br>・HackMD(https://hackmd.io/)</p>
+          <p>その他ツール/サービス、言語やフレームワーク、標準規格など を以下に載せておきます。 <br>・<a href="https://www.arduino.cc/">Arduino</a><br>・<a
+              href="https://expressjs.com/">Express</a><br>・<a
+              href="https://www.typescriptlang.org/">TypeScript</a><br>・<a href="https://vuejs.org/">Vue.js</a> <br>・<a
+              href="https://developers.line.biz/ja/docs/ messaging-api/">LINE Message API</a><br>・<a
+              href="https://github.com/typicode/husky">Husky</a> <br>・<a
+              href="https://github.com/ngryman/cz-emoji">cz-emoji</a>
+            <br>・<a href="https://swagger.io/specification/">Swagger</a><br>・<a
+              href="https://mariadb.org/">MariaDB</a><br>・<a href="https://typeorm.io/">TypeORM</a> <br>・<a
+              href="https://en.wikipedia.org/wiki/ Progressive_web_application">PWA</a><br>・<a
+              href="https://letsencrypt.org/">Let’s Encrypt</a> <br>・<a
+              href="https://dredd.org/en/latest/">Dredd</a><br>・<a href="https://www.cypress.io/">cypress</a> <br>・<a
+              href="https://jestjs.io/">Jest</a> <br>・<a href="https://www.zabbix.com/">Zabbix</a>
+            <br>・<a href="https://nginx.org/">nginx</a> <br>・<a href="https://classic.yarnpkg.com/lang/en/">yarn</a>
+            <br>・<a href="https://www.mysql.com/products/workbench/">MySQL</a> <br>・<a
+              href="https://dbeaver.io/">Dbeaver</a><br>・<a href="https://hackmd.io/">HackMD</a></p>
         </div>
       </div>
 
       <div class="story-3">
         <div class="st3-left">
-          <video src="./video/200917_141832.mp4" width="650px"controls></video>
-          <img src="./img/story/IMG_20200923_192727.jpg" alt="raspberry Pi" width="650px" height="450px">
+          <video src="./video/200917_141832.mp4" width="650px" controls></video><p class="num" id="num3">3</p>
+          <img src="./img/story/IMG_20200923_192727.jpg" alt="raspberry Pi" width="650px" height="450px"><p class="num" id="num5">5</p>
         </div>
         <div class="st3-right">
-          <img src="./img/story/iOS の画像.jpg" alt="illustrate" width="390px">
+          <img src="./img/story/iOS の画像.jpg" alt="illustrate" width="375px"><p class="num" id="num4">4</p>
           <div id="text4">
             <h3>03 開発・作成</h3>
             <p>電子設計やフロント・バックエンドのプログラミング、Webコンテンツの設計、イラストなどそれぞれ得意分野に分かれて作っていきました。以下の写真がその様子です。</p>
-            <p>写真3：ブレットボード上での動作確認 <br>写真4：イラスト案 <br>写真5：基盤完成 <br>写真6：赤外線センサ部の回路図 <br>写真7：本体外装をCADで設計 <br>写真8：３Dプリンタの様子 <br>写真9：ワイヤーフレームとモックアップの作成</p>
+            <p>写真3：ブレットボード上での動作確認 <br>写真4：イラスト案 <br>写真5：基盤完成 <br>写真6：赤外線センサ部の回路図 <br>写真7：本体外装をCADで設計 <br>写真8：３Dプリンタの様子
+              <br>写真9：ワイヤーフレームとモックアップ</p>
           </div>
         </div>
       </div>
 
       <div id="story-4">
-        <img src="./img/story/image.png" alt="baseboad" width="400px">
-        <video src="./video/cad-video.mp4" controls width="640px"></video>
+        <img src="./img/story/image.png" alt="baseboad" width="385px"><p class="num" id="num6">6</p>
+        <video src="./video/cad-video.mp4" controls width="640px"></video><p class="num" id="num7">7</p>
       </div>
       <div id="story-5">
-        <video src="./video/making-post.mp4" controls width="740px"></video>
-        <img src="./img/story/mockup.png" alt="wireflame" width="310px">
+        <video src="./video/making-post.mp4" controls width="740px"></video><p class="num" id="num8">8</p>
+        <img src="./img/story/mockup.png" alt="wireflame" width="285px"><p class="num" id="num9">9</p>
       </div>
       <div class="st-comment">
         <h3>04 今後の課題・方針</h3>
-        <p>・現在は原価価格と部品調達の提示、開発手法がわかるようにオープンソース化を進めています。 <br>・スマートポストは神戸市行政と市民の課題解決のためにスタートしましたが、将来的にはスマートポスト商品化し事業の検討をしています。 <br>・ポスト内に書類を撮影する機能の他に、OCRを導入して書類を認識した情報をLINEに送信する機能を考えましたが、高コストであることと。認識精度が日本語だと難易度が高いことから実装が難しいです。一方、AIの画像認識を利用した文字の抽出を検討しています。</p>
+        <p>・現在は原価価格と部品調達の提示、開発手法がわかるようにオープンソース化を進めています。
+          <br>・スマートポストは神戸市行政と市民の課題解決のためにスタートしましたが、将来的にはスマートポスト商品化し事業の検討をしています。
+          <br>・ポスト内に書類を撮影する機能の他に、OCRを導入して書類を認識した情報をLINEに送信する機能を考えましたが、高コストであることと。認識精度が日本語だと難易度が高いことから実装が難しいです。一方、AIの画像認識を利用した文字の抽出を検討しています。
+        </p>
       </div>
     </div>
   </div>
@@ -79,4 +111,5 @@
   </div>
 
 </body>
+
 </html>
