fixed anjyu's link

--- a/index.html
+++ b/index.html
@@ -196,21 +196,21 @@
       </div>
       <div class="mem-bottom">
         <div class="to-margin anjyu">
-          <img src="./img/members/anjuu.jpg">
+          <img src="./img/members/anjuu.jpg" width="100%">
           <ul class="icon">
-            <li><a href=""><i class="fab fa-github" target="_brank"></i></a></li>
+            <li><a href="http://anjyu-style.chu.jp/portfolio/"><img src="./img/anjyu_logo.png" alt="logo" width="50px"></a></li>
             <li><a href="https://twitter.com/anjyu_style" target="_brank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="to-margin ryuji">
-          <img src="./img/members/ryuji.jpg">
+          <img src="./img/members/ryuji.jpg" width="100%">
           <ul class="icon">
             <li><a href="https://github.com/ryuji-cre8ive" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/ryuji_vlog" target="_brank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="to-margin yuri">
-          <img src="./img/members/yuriyuri.png">
+          <img src="./img/members/yuriyuri.png" width="100%">
           <ul class="icon">
             <li><a href="https://github.com/gotoyuriko" target="_brank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://twitter.com/yuriko_goto" target="_brank"><i class="fab fa-twitter"></i></a></li>
