fixed story and find

--- a/more.html
+++ b/more.html
@@ -43,7 +43,7 @@
           <div class="media-wrap"><img src="./img/story/IMG_20200923_192727.jpg" alt="raspberry Pi" width="650px" height="450px"><p class="num" id="num5">5</p></div>
         </div>
         <div class="st3-right">
-          <div class="media-wrap"><img src="./img/story/iOS の画像.jpg" alt="illustrate" width="375px"><p class="num" id="num4">4</p> class="media-wrap"</div>
+          <div class="media-wrap"><img src="./img/story/iOS の画像.jpg" alt="illustrate" width="390px"><p class="num" id="num4">4</p></div>
           <div id="text4">
             <h3>03 開発・作成</h3>
             <p>電子設計やフロント・バックエンドのプログラミング、Webコンテンツの設計、イラストなどそれぞれ得意分野に分かれて作っていきました。以下の写真がその様子です。</p><p>写真3：ブレットボード上での動作確認 <br>写真4：イラスト案 <br>写真5：基盤完成 <br>写真6：赤外線センサ部の回路図 <br>写真7：本体外装をCADで設計 <br>写真8：３Dプリンタの様子<br>写真9：ワイヤーフレームとモックアップ</p>
@@ -53,11 +53,11 @@
 
       <div id="story-4">
         <div class="media-wrap"><img src="./img/story/image.png" alt="baseboad" width="385px" height="100%"><p class="num" id="num6">6</p></div>
-        <div class="media-wrap"><video src="./video/cad-video.mp4" controls width="640px"></video><p class="num" id="num7">7</p></div>
+        <div class="media-wrap"><video src="./video/cad-video.mp4" controls width="655px"></video><p class="num" id="num7">7</p></div>
       </div>
       <div id="story-5">
         <div class="media-wrap"><video src="./video/making-post.mp4" controls width="740px"></video><p class="num" id="num8">8</p></div>
-        <div class="media-wrap"><img src="./img/story/mockup.png" alt="wireflame" width="285px" height="100%"><p class="num" id="num9">9</p></div>
+        <div class="media-wrap"><img src="./img/story/mockup.png" alt="wireflame" width="300px" height="100%"><p class="num" id="num9">9</p></div>
       </div>
       <div class="st-comment">
         <h3>04 今後の課題・方針</h3>
