--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <img src="./img/bg.png" alt="top" id="top">
     </div>
     <div class="proper">
-      <a href="./find.html"><img src="./img/cheapest.png" alt="cheapest" width="300px"></a>
+      <a href="./find.html"><img src="./img/cheapest.png" alt="cheapest" width="300px" id="cheapest"></a>
     </div>
   </div>
 
