--- a/find.html
+++ b/find.html
@@ -18,6 +18,8 @@
     <div class="center2">
       <h1>スマートポストの最適モデルを探す</h1>
 
+      <p id="exp">以下の質問にお答えいただくことで適切なプランと価格提示をすることができます</p>
+
       <div class="choice-box">
         <div class="first para">
           <p>ポストの開閉口に蓋はありますか？</p>
