--- a/more.html
+++ b/more.html
@@ -14,7 +14,7 @@
 
   <div class="center2">
     <h1>制作ストーリー</h1>
-
+    <p id="story-p">スマートポストが出来上がるまでの変遷を辿っていきます</p>
     <div class="mk-story">
       <div class="story-1">
         <div id="text1">
