--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
           <img src="./img/man.png" alt="man" width="300px">
         </div>
         <div class="comment1">
-          <p>最高です</p>
+          <p>こんなポスト欲しかった！</p>
           <img src="./img/comment-left.png" alt="comment" width="400px" height="200px">
         </div>
 
       </div>
       <div class="re-bot">
         <div class="comment2">
-          <p>最高だわ</p>
+          <p>通知してくれるのはすごく助かるわ！</p>
           <img src="./img/comment-right.png" alt="comment" width="400px" height="200px">
         </div>
 
