--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta charset="UTF-8">
-  <meta property="og:url" content="https://smart-post.netlify.app/" />
+  <meta property="og:url" content="https://smart-post-lp.3n38.app" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="SmartPost" />
   <meta property="og:description" content="次世代のポスト" />
-  <meta property="og:image" content="https://smart-post.netlify.app/img/post.png" />
+  <meta property="og:image" content="https://smart-post-lp.3n38.app/img/post.png" />
   <meta name="twitter:card" content="summary" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
@@ -229,7 +229,7 @@
     </div>
   </div>
 
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="./index.js"></script>
 </body>
