--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="center">
       <h1>スマートポストとは？</h1>
       <div class="comment">
-        <p id="com-1">祖父母が老人ホームに行っているので定期的に祖父母の家に郵便物を撮りに行かなければならない</p>
+        <p id="com-1">祖父母が老人ホームに行っているので定期的に祖父母の家に郵便物を取りに行かなければならない</p>
         <p id="com-2">コロナ禍で在宅勤務中だが事務所に届いた書類を見に行かなければならない</p>
         <p id="com-3">事務所が2階にあるので1階のポストを確認しに行くのは億劫だ</p>
       </div>
